--- a/.envTemplate
+++ b/.envTemplate
@@ -1,3 +1,11 @@
 EXPRESS_PROTOCOL=
 EXPRESS_HOST_NAME=
 EXPRESS_PORT=
+
+MONGO_PROTOCOL=
+MONGO_USER=
+MONGO_PSW=
+MONGO_HOST=
+MONGO_PORT=
+
+MONGO_DB_NAME=
