--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch --env-file .env ./server/app.js"
+    "start": "node --watch --env-file .env ./app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.20.0",
+    "express": "^4.21.0",
     "mongodb": "^6.8.1"
   }
 }
