feat: :sparkles: Creacion Usuario Sign Up

--- a/.envTemplate
+++ b/.envTemplate
@@ -1,6 +1,8 @@
 EXPRESS_PROTOCOL=
 EXPRESS_HOST_NAME=
 EXPRESS_PORT=
+EXPRESS_STATIC=src
+EXPRESS_KEY_SECRET=MyLlaveSecreta
 
 MONGO_PROTOCOL=
 MONGO_USER=
