--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.21.0",
+    "express-fileupload": "^1.5.1",
     "mongodb": "^6.9.0"
   }
 }
